--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -8,5 +8,5 @@
     <item android:id="@+id/recite" android:title="Recite"></item>
     <item android:id="@+id/help" android:title="Help"></item>
     <item android:id="@+id/settings" android:title="Settings"></item>
-    <item android:id="@+id/logout" android:title="Logout "></item>
+    <item android:id="@+id/logout" android:title="Logout " android:onClick="@+id"></item>
 </menu>
